updated predictor file

--- a/model/bhp_predictor.ipynb
+++ b/model/bhp_predictor.ipynb
@@ -428,7 +428,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sinch\\AppData\\Local\\Temp\\ipykernel_9404\\3005732327.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\sinch\\AppData\\Local\\Temp\\ipykernel_12316\\3005732327.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2588,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "e90f4cf8",
    "metadata": {},
    "outputs": [],
@@ -2602,11 +2602,13 @@
    "cell_type": "markdown",
    "id": "cc6ea305",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Determining X data & y target"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "19271b49",
    "metadata": {},
    "outputs": [],
@@ -2617,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "b21c56e5",
    "metadata": {},
    "outputs": [],
@@ -2628,17 +2630,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "id": "fe99db4b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Python310\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "0.8452277697874261"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2646,13 +2656,13 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "lrm = LinearRegression()\n",
-    "lrm.fit(X_train,y_train)\n",
+    "lrm.fit(X_train.values,y_train)\n",
     "lrm.score(X_test,y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "5e7c57eb",
    "metadata": {},
    "outputs": [
@@ -2662,7 +2672,7 @@
        "array([0.82430186, 0.77166234, 0.85089567, 0.80837764, 0.83653286])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2677,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "604d0653",
    "metadata": {},
    "outputs": [],
@@ -2689,7 +2699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 45,
    "id": "956797a4",
    "metadata": {},
    "outputs": [],
@@ -2732,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "id": "93404577",
    "metadata": {},
    "outputs": [
@@ -2886,8 +2896,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>dec_tree</td>\n",
-       "      <td>0.761175</td>\n",
-       "      <td>{'criterion': 'friedman_mse', 'splitter': 'ran...</td>\n",
+       "      <td>0.718806</td>\n",
+       "      <td>{'criterion': 'friedman_mse', 'splitter': 'best'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2897,21 +2907,21 @@
        "      model  best_score                                        best_params\n",
        "0   lin_reg    0.818354                               {'normalize': False}\n",
        "1     lasso    0.687429                {'alpha': 1, 'selection': 'cyclic'}\n",
-       "2  dec_tree    0.761175  {'criterion': 'friedman_mse', 'splitter': 'ran..."
+       "2  dec_tree    0.718806  {'criterion': 'friedman_mse', 'splitter': 'best'}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "find_best_model_by_gcv(X,y)"
+    "find_best_model_by_gcv(X.values,y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "id": "17e1aff8",
    "metadata": {},
    "outputs": [],
@@ -2929,7 +2939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "id": "36c80cda",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2957,7 @@
        "      dtype='object', length=244)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2958,25 +2968,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "id": "6158becb",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Python310\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "83.4990467715936"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2987,25 +2989,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "id": "bf66a0d7",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Python310\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "86.80519395185858"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3016,25 +3010,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "id": "7f10c38a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Python310\\lib\\site-packages\\sklearn\\base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "184.58430202033713"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3045,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "id": "1f88fbe2",
    "metadata": {},
    "outputs": [],
@@ -3057,7 +3043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "id": "01ad0a83",
    "metadata": {},
    "outputs": [],
