more headings added

--- a/model/bhp_predictor.ipynb
+++ b/model/bhp_predictor.ipynb
@@ -1479,7 +1479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_pps_outliers(df):\n",
+    "def remove_pps_outliers(df):   # pps = price_per_sqft\n",
     "    df_out = pd.DataFrame()\n",
     "    for key,subdf in df.groupby('location'):\n",
     "        m = np.mean(subdf.price_per_sqft)\n",
@@ -2618,6 +2618,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a0171da",
+   "metadata": {},
+   "source": [
+    "## Splitting data for training and testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "b21c56e5",
@@ -2626,6 +2634,14 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2,random_state=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b563f06a",
+   "metadata": {},
+   "source": [
+    "## Linear Prediction model"
    ]
   },
   {
@@ -2683,6 +2699,14 @@
     "\n",
     "cv = ShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
     "cross_val_score(LinearRegression(), X, y, cv=cv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2420ab8a",
+   "metadata": {},
+   "source": [
+    "## Best model with best parameters finding function"
    ]
   },
   {
@@ -2920,6 +2944,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97be2f4e",
+   "metadata": {},
+   "source": [
+    "## Price prediction from model function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "17e1aff8",
@@ -2941,7 +2973,9 @@
    "cell_type": "code",
    "execution_count": 57,
    "id": "36c80cda",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2964,6 +2998,14 @@
    ],
    "source": [
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d0b132c",
+   "metadata": {},
+   "source": [
+    "## Evaluating Model Prediction"
    ]
   },
   {
@@ -3030,6 +3072,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9de1630",
+   "metadata": {},
+   "source": [
+    "## Pickle file creation of Prediction Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "id": "1f88fbe2",
@@ -3039,6 +3089,14 @@
     "import pickle\n",
     "with open('bhp_model.pickle','wb') as f:\n",
     "    pickle.dump(lrm,f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acda6be9",
+   "metadata": {},
+   "source": [
+    "## Exporting the dataset columns to a json file"
    ]
   },
   {
