--- a/model/bhp_predictor.ipynb
+++ b/model/bhp_predictor.ipynb
@@ -2986,7 +2986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 108,
    "id": "17e1aff8",
    "metadata": {},
    "outputs": [],
@@ -3004,6 +3004,7 @@
     "    if loc_index > 0:\n",
     "        x[loc_index] = 1\n",
     "    print(x)\n",
+    "    print(lrm.predict([x]))\n",
     "    return lrm.predict([x])[0]"
    ]
   },
@@ -3017,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 111,
    "id": "6158becb",
    "metadata": {},
    "outputs": [
@@ -3056,7 +3057,8 @@
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
       "    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.    0.\n",
-      "    0.    0.    0.    0.]\n"
+      "    0.    0.    0.    0.]\n",
+      "[83.49904677]\n"
      ]
     },
     {
@@ -3065,7 +3067,7 @@
        "83.4990467715936"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3076,7 +3078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
    "id": "bf66a0d7",
    "metadata": {},
    "outputs": [
@@ -3124,7 +3126,7 @@
        "86.80519395185858"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3135,7 +3137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 107,
    "id": "7f10c38a",
    "metadata": {},
    "outputs": [
@@ -3183,13 +3185,13 @@
        "85.19544264027802"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict_price('Indira',1000,3,3)"
+    "predict_price('any other area',1000,3,3)"
    ]
   },
   {
